--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Testing</title>
+    <title>Modification</title>
 </head>
 <body>
-    <h1>This is the testing page</h1>
+    <h1>This is the Real time Webpage page</h1>
 </body>
 </html>
