modification done by preethi

--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
     <title>Modification</title>
 </head>
 <body>
-    <h1>This is the Real time Webpage page</h1>
+    <h1>Modification done</h1>
 </body>
 </html>
